--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <title>Ahmed Abdulrahman | Finance & Data</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="assets/css/main.css" />
 
     <style>
-        /* Modern Royal Color Scheme */
         :root {
             --royal-blue: #2F6BFF;
             --navy: #102A54;
@@ -18,6 +21,12 @@
 
         body {
             background-color: var(--navy);
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
+        }
+
+        h1, h2, h3 {
+            font-weight: 600;
+            letter-spacing: -0.3px;
         }
 
         /* Header */
@@ -31,35 +40,64 @@
 
         #header p {
             color: var(--text-light);
+            font-size: 0.85rem;
         }
 
-        /* Hero Section */
+        /* Avatar */
+        .image.avatar48 img {
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        /* Hero */
         #top {
             background: var(--navy);
             color: var(--text-light);
+            padding: 4em 0 3em 0 !important;
         }
 
-        #top h2 strong {
-            color: var(--royal-blue);
+        .hero-name {
+            font-size: 3.2rem;
+            margin-bottom: 0.3em;
+        }
+
+        .hero-subtitle {
+            font-size: 1.05rem;
+            color: #dbe4ff;
+            margin-bottom: 0.2em;
+        }
+
+        .hero-credentials {
+            font-size: 0.9rem;
+            color: #b9c7e6;
         }
 
         .button.scrolly {
             background: var(--royal-blue);
             border: none;
             color: white !important;
+            margin-top: 1.2em;
         }
 
-        /* Section Backgrounds */
-        #portfolio, #about, #contact {
+        /* Sections */
+        #about, #portfolio, #skills, #contact {
             background: var(--section-bg);
             color: #111;
         }
 
-        /* Project Cards */
+        /* About */
+        .about-tight p {
+            max-width: 760px;
+            margin: 0 auto 1.2em auto;
+            line-height: 1.65;
+            font-size: 0.98rem;
+        }
+
+        /* Projects */
         #portfolio .item {
             background: white;
             border-radius: 12px;
-            padding-bottom: 10px;
+            padding-bottom: 6px;
             box-shadow: 0px 4px 12px rgba(0,0,0,0.07);
             transition: transform 0.2s ease;
         }
@@ -68,12 +106,12 @@
             transform: translateY(-6px);
         }
 
-        /* Titles */
-        h2 {
-            color: var(--navy);
+        #portfolio .item header h3 {
+            font-size: 0.95rem;
+            margin: 0.6em 0 0.4em 0;
         }
 
-        /* Contact Form Styling */
+        /* Inputs */
         input, textarea {
             border: 1px solid var(--steel-gray);
             border-radius: 6px;
@@ -87,163 +125,118 @@
 <div id="header">
     <div class="top">
 
-        <!-- Logo -->
         <div id="logo">
-            <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+            <span class="image avatar48">
+                <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot" />
+            </span>
             <h1 id="title">Ahmed Abdulrahman</h1>
-            <p>BCom: Finance • Economics • Data Analytics • Data Science | CFA Level I</p>
+            <p>BCom Finance • Economics • Data Analytics<br>CFA Level I</p>
         </div>
 
-        <!-- Nav -->
         <nav id="nav">
             <ul>
-                <li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-                <li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Projects</span></a></li>
-                <li><a href="#skills" id="skills-link"><span class="icon solid fa-code">Skills</span></a></li>
-                <li><a href="#about" id="about-link"><span class="icon solid fa-user">About</span></a></li>
-                <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+                <li><a href="#top">Intro</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#portfolio">Projects</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
-
-    </div>
-
-    <div class="bottom">
-        <ul class="icons">
-            <li><a href="https://github.com/ahmedabdulrahman125-tech" class="icon brands fa-github"><span class="label">Github</span></a></li>
-            <li><a href="mailto:your-email@example.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-        </ul>
     </div>
 </div>
 
 <!-- Main -->
 <div id="main">
 
-    <!-- Intro -->
-    <section id="top" class="one dark cover">
-        <div class="container">
-            <header>
-                <h2 class="alt">Hi, I'm <strong>Ahmed Abdulrahman</strong> — Finance & Data Analytics</h2>
-                <p>Rotman Commerce | Specializing in Capital Markets, Modeling, and Machine Learning<br>
-                Passionate about building data-driven financial insights and automated analytics tools.</p>
-            </header>
-            <footer>
-                <a href="#portfolio" class="button scrolly">Explore My Projects</a>
-            </footer>
-        </div>
-    </section>
+<!-- Hero -->
+<section id="top">
+    <div class="container">
+        <header>
+            <h1 class="hero-name">Ahmed Abdulrahman</h1>
+            <p class="hero-subtitle">
+                Portfolio Analytics • Financial Modeling • Data-Driven Investing
+            </p>
+            <p class="hero-credentials">
+                Rotman Commerce • CFA Level I • Capital Markets & Analytics
+            </p>
+        </header>
+        <footer>
+            <a href="#portfolio" class="button scrolly">View Projects</a>
+        </footer>
+    </div>
+</section>
 
-    <!-- Projects -->
-    <section id="portfolio" class="two">
-        <div class="container">
-            <header>
-                <h2>Projects</h2>
-            </header>
+<!-- About -->
+<section id="about">
+    <div class="container about-tight">
+        <header><h2>About Me</h2></header>
 
-            <p>A curated selection of my work across Finance, Economics, Data Science, and Analytics.</p>
+        <p>
+            I am a Rotman Commerce graduate specializing in Finance, Economics, and Data Analytics,
+            with experience supporting portfolio strategy, asset allocation, and investment analysis
+            across public markets. I have worked in portfolio analytics and commercial banking,
+            delivering market-driven insights tied to macroeconomic conditions, pricing dynamics,
+            and risk considerations.
+        </p>
 
-            <div class="row">
+        <p>
+            My work combines traditional financial modeling (DCF, LBO, M&A) with data analytics
+            and automation using Python, SQL, and BI tools. I am particularly interested in roles
+            where data, markets, and decision-making intersect—supporting investment teams with
+            rigorous, practical analysis. I have passed CFA Level I and am a Level II candidate.
+        </p>
+    </div>
+</section>
 
-                <!-- Project Template Example -->
-                <div class="col-4 col-12-mobile">
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-                        <header><h3>Financial Modeling Project</h3></header>
-                    </article>
+<!-- Projects -->
+<section id="portfolio">
+    <div class="container">
+        <header><h2>Projects</h2></header>
+        <p>Selected work across finance, markets, and analytics.</p>
 
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-                        <header><h3>Market Microstructure Analysis</h3></header>
-                    </article>
-                </div>
-
-                <div class="col-4 col-12-mobile">
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-                        <header><h3>Machine Learning Forecasting</h3></header>
-                    </article>
-
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-                        <header><h3>Trading Strategy Backtest</h3></header>
-                    </article>
-                </div>
-
-                <div class="col-4 col-12-mobile">
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-                        <header><h3>Econometrics Research</h3></header>
-                    </article>
-
-                    <article class="item">
-                        <a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-                        <header><h3>Risk Analytics Dashboard</h3></header>
-                    </article>
-                </div>
-
+        <div class="row">
+            <div class="col-4 col-12-mobile">
+                <article class="item"><header><h3>Portfolio Analytics Dashboard</h3></header></article>
+                <article class="item"><header><h3>Financial Modeling (DCF / LBO)</h3></header></article>
+            </div>
+            <div class="col-4 col-12-mobile">
+                <article class="item"><header><h3>Trading Strategy Backtest</h3></header></article>
+                <article class="item"><header><h3>Macro-Driven Market Analysis</h3></header></article>
+            </div>
+            <div class="col-4 col-12-mobile">
+                <article class="item"><header><h3>Risk & Performance Attribution</h3></header></article>
+                <article class="item"><header><h3>Econometrics Research</h3></header></article>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 
-    <!-- Skills -->
-    <section id="skills" class="three">
-        <div class="container">
-            <header><h2>Skills</h2></header>
-
-            <p><strong>Financial:</strong> DCF, LBO, M&A Modeling, Portfolio Analytics, Risk Models<br>
+<!-- Skills -->
+<section id="skills">
+    <div class="container">
+        <header><h2>Skills</h2></header>
+        <p>
+            <strong>Finance:</strong> DCF, LBO, M&A, Portfolio Analytics, Risk Models<br>
             <strong>Programming:</strong> Python, SQL, Power BI, Tableau<br>
-            <strong>Machine Learning:</strong> Regression, Classification, Forecasting Models<br>
-            <strong>Tools:</strong> Bloomberg, Excel (Advanced), GitHub</p>
-        </div>
-    </section>
+            <strong>Tools:</strong> Bloomberg, Morningstar, Excel (Advanced), Git
+        </p>
+    </div>
+</section>
 
-    <!-- About -->
-    <section id="about" class="three">
-        <div class="container">
-            <header><h2>About Me</h2></header>
-            <p>I’m a Rotman Commerce student specializing in Finance, Economics, Data Analytics, and Data Science.
-            I blend financial modeling with machine learning to build practical, insight-driven tools for capital markets.
-            Passionate about automation, investment research, and quantitative analysis.</p>
-        </div>
-    </section>
+<!-- Contact -->
+<section id="contact">
+    <div class="container">
+        <header><h2>Contact</h2></header>
+        <p>Open to full-time roles, internships, and discussions.</p>
+    </div>
+</section>
 
-    <!-- Contact -->
-    <section id="contact" class="four">
-        <div class="container">
-            <header><h2>Contact</h2></header>
-            <p>Feel free to reach out about roles, collaborations, or project discussions.</p>
-
-            <form method="post" action="#">
-                <div class="row">
-                    <div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
-                    <div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
-                    <div class="col-12">
-                        <textarea name="message" placeholder="Message"></textarea>
-                    </div>
-                    <div class="col-12">
-                        <input type="submit" value="Send Message" />
-                    </div>
-                </div>
-            </form>
-        </div>
-    </section>
-
-</div>
-
-<!-- Footer -->
-<div id="footer">
-    <ul class="copyright">
-        <li>&copy; 2025 Ahmed Abdulrahman. All rights reserved.</li>
-        <li>Design: HTML5 UP</li>
-    </ul>
 </div>
 
 <script src="assets/js/jquery.min.js"></script>
-<script src="assets/js/jquery.scrolly.min.js"></script>
-<script src="assets/js/jquery.scrollex.min.js"></script>
-<script src="assets/js/browser.min.js"></script>
-<script src="assets/js/breakpoints.min.js"></script>
-<script src="assets/js/util.js"></script>
 <script src="assets/js/main.js"></script>
 
 </body>
 </html>
+
+
