--- a/index.html
+++ b/index.html
@@ -125,13 +125,17 @@
 <div id="header">
     <div class="top">
 
-        <div id="logo">
-            <span class="image avatar48">
-                <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot" />
-            </span>
-            <h1 id="title">Ahmed Abdulrahman</h1>
-            <p>BCom Finance • Economics • Data Analytics<br>CFA Level I</p>
-        </div>
+        <div id="logo" class="logo-flex">
+    <span class="image avatar48 avatar-left">
+        <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot" />
+    </span>
+
+    <div class="logo-text">
+        <h1 id="title">Ahmed Abdulrahman</h1>
+        <p>Finance • Data Analytics • CFA Level I</p>
+    </div>
+</div>
+
 
         <nav id="nav">
             <ul>
@@ -238,5 +242,6 @@
 
 </body>
 </html>
+
 
 
