--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div id="logo" class="logo-flex">
     <span class="image avatar48 avatar-left">
-        <img src="images/headshot.jpg.png" alt="Ahmed Abdulrahman headshot" />
+        <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot" />
     </span>
 
     <div class="logo-text">
