--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         ===================== */
 
         #header {
-            width: 290px;
+            width: 300px;
             background: var(--sidebar-navy);
             border-right: 1px solid rgba(255,255,255,0.06);
         }
@@ -189,7 +189,7 @@
         <div id="logo">
             <div class="logo-flex">
                 <span class="image avatar48 avatar-left">
-                    <img src="images/headshot.jpg" alt="Ahmed Abdulrahman headshot" />
+                    <img src="images/headshot.png" alt="Ahmed Abdulrahman headshot" />
                 </span>
 
                 <div class="logo-text">
@@ -296,3 +296,4 @@
 
 </body>
 </html>
+
